# Prueba-tecnica-Lite-Thinkng

./: .env.example  .gitignore  CNAME  PruebaTecnica_Requerimientos.txt  README.md  docker-compose.yml
backend-django/: Dockerfile  requirements.txt
backend-django/core/: settings.py  urls.py
backend-django/inventario/: models.py  serializers.py  urls.py  views.py
backend-django/inventario/migrations/: 0001_initial.py
domain-package/: pyproject.toml
domain-package/domain/: entities.py  rules.py
frontend-nextjs/: package-lock.json  package.json
frontend-nextjs/src/components/: Layout.js  Navbar.js
frontend-nextjs/src/pages/: _document.js  copiloto.js  empresas.js  index.js  inventario.js  login.js  productos.js
frontend-nextjs/src/styles/: globals.css
microservice-fastapi/: Dockerfile  main.py  requirements.txt  test_api.py
