[project]
name = "litetest"
version = "0.1.0"
description = "Prueba tecnica para Desarrollador Python, Django y React."
authors = [
    {name = "Sebastian Ospina"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic[email] (>=2.13.4,<3.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"